argocd/applications/media/homepage/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: prod-media
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.st0rmingbr4in.com`)
      services:
        - name: homepage
          port: 3000
